[package]
name = "impulse_response"
version = "0.2.0"
edition = "2018"
authors = ["David McDougall <dam1784@rit.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ctrl-z-9000-times/impulse_response"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
description = "Impulse Response Integration Method"
exclude = ["dense.rs", "nn.rs", "knn.rs", "histogram.rs"]

[lib]
name = "impulse_response"
crate-type = ["lib", "cdylib"]

[dependencies]
rand = "0"
rayon = "1"
# generic-array = "0.14"
# typenum = "1"

# [features]
# python = ["pyo3", "numpy"]
# default = []
# 
# [dependencies.pyo3]
# version = "0"
# features = ["extension-module"]
# optional = true
# 
# [dependencies.numpy]
# version = "0"
# optional = true
