[package]
name = "impulse_response"
version = "0.6.0"
edition = "2018"
authors = ["David McDougall <dam1784@rit.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ctrl-z-9000-times/impulse_response"
categories = ["mathematics", "science", "simulation"]
description = "Impulse Response Integration Method"

[lib]
name = "impulse_response"
crate-type = ["lib"]

[dependencies]
rand = "0"
rayon = "1"
